--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
   <head>
     <title>My Best Friend</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta http-equiv="content" content="pt-BR" />
+    <meta name="author" content="Renata Gadelha"/>
+    <meta name="description" content="Um projeto simples utilizando JavaScript para consumir o Dog API"/>
+    <meta name="keywords" content="api, dog api, javascript, fetch, desenvolvimento, vanilla js">
+    <meta name="robots" content="index, follow">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
