--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="data-delete">
                     <button type="submit" id="buttonDelete" class="btn-delete">X</button>
                 </div>
-                <img id="dogPicture" src="images/dog-default.svg" class="img-fluid"/>
+                <img id="dogPicture" src="images/dog-default.svg" alt="Foto do(a) Melhor Amigo(a)" title="Foto do(a) Melhor Amigo(a)" class="img-fluid"/>
                 
                 <div id="dogText">My Best Friend</div>  
             </div>
